# cuda-dyn-codegen

./: .gitignore  CMakeLists.txt  README.md
results/: 2g4000x4000.csv  Vergleich.ods  c1000x1000.csv  c100x100.csv  c4000x4000.csv  cpu-impl.csv  d4000x4000.csv  d8198x8198.csv  dyn.csv  dyn2_1026_1026.csv  dyn2_128_128.csv  dyn2_2050_2050.csv  dyn2_258_258.csv  dyn2_4098_4098.csv  dyn2_514_514.csv  dyn6_1028_1028.csv  dyn6_132_132.csv  dyn6_2052_2052.csv  dyn6_260_260.csv  dyn6_4100_4100.csv  dyn6_516_516.csv  g1000x1000.csv  g100x100.csv  g4000x4000.csv  g4034x4034.csv  g8198x8198.csv  gpu-impl1.csv  gpu-impl2.csv  gpu-impl3.csv  gpu.csv  gpu1_1024_1024.csv  gpu1_128_128.csv  gpu1_2048_2048.csv  gpu1_256_256.csv  gpu1_4096_4096.csv  gpu1_512_512.csv  gpu2_1024_1024.csv  gpu2_128_128.csv  gpu2_2048_2048.csv  gpu2_256_256.csv  (+8 more)
src/: CMakeLists.txt  CpuImpl.cpp  CpuTimer.h  Cuda.h  CudaCall.h  DynCodegen.cu  GpuImpl.cu  GpuTimer.h  Logger.h  Matrix.h  Stencil.h  kernel_5p_v1.cu  kernel_5p_v2.cu  kernel_5p_v3.cu  kernel_5p_v4.cu  kernel_5p_v5.cu  kernel_9p_v1.cu  main.cpp  make_unique.h  rt_kernel.h
src/MatrixToBmp/: MatrixToBmp.sln
src/MatrixToBmp/MatrixToBmp/: MatrixToBmp.csproj  Program.cs
src/MatrixToBmp/MatrixToBmp/Properties/: AssemblyInfo.cs
src/program_options/: CMakeLists.txt
