cmake_minimum_required(VERSION 2.8.5)

set(CMAKE_C_COMPILER_IVY "gcc")
set(CMAKE_CXX_COMPILER_IVY "g++")

project(cuda-dyn-codegen)

set(CMAKE_CXX_FLAGS_IVY "-std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG_IVY "-std=c++11 -g -D_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE_IVY "-std=c++11 -O2")

find_package(CUDA REQUIRED)

set(CUDA_HOST_COMPILER_IVY "g++")
set(CUDA_NVCC_FLAGS_IVY "${CUDA_NVCC_FLAGS} -std=c++11")

MARK_AS_ADVANCED(
    CMAKE_C_COMPILER_IVY
    CMAKE_CXX_COMPILER_IVY
    CMAKE_CXX_FLAGS_IVY
    CMAKE_CXX_FLAGS_DEBUG_IVY
    CMAKE_CXX_FLAGS_RELEASE_IVY
    CUDA_HOST_COMPILER_IVY
    CUDA_NVCC_FLAGS_IVY
)

set(CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)

add_subdirectory(src)

